# DeepEcho

./: .gitignore  .tool-versions  README.md  docker-compose.yml  presentazione.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py  models.py
backend/src/api/: analyze.py  audio_stream.py  preview.py  track.py  trajectory.py  upload.py
backend/src/cache/: __init__.py  session_cache.py
backend/src/processing/: metadata_parser.py  metrics.py  prh_parser.py  spectrogram.py  wav_loader.py
backend/tests/: test_analyze.py  test_integration.py  test_metadata_parser.py  test_metrics.py  test_prh_parser.py  test_session_cache.py  test_spectrogram.py  test_track.py  test_upload.py  test_wav_loader.py
docs/: DATA_STRUCTURE.md  rifiniture.md
docs/superpowers/plans/: 2026-06-08-phase1-priority-set.md
docs/superpowers/specs/: 2026-06-08-phase1-priority-set-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DashboardGrid.jsx  HoverReadout.jsx  PanelWrapper.jsx  Sidebar.jsx  Timeline.jsx
frontend/src/components/plots/: DepthSpeedPlot.jsx  DivePanel.jsx  EnergyPlot.jsx  GpsMapPlot.jsx  JerkFlukePlot.jsx  PRHPlot.jsx  SpectrogramPlot.jsx  StatsPanel.jsx  TrajectoryPlot.jsx  WaveformPlot.jsx
frontend/src/hooks/: usePlotTheme.js  useSyncedPlotly.js
frontend/src/lib/: cetaceanMesh.js  diveDetect.js  preyDetection.js  utils.js
frontend/src/stores/: deploymentStore.js  layoutStore.js  settingsStore.js  timelineStore.js
