[project]
name = "cats-backend"
version = "0.1.0"
description = "FastAPI backend for CATS whale tracking data visualization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "python-multipart>=0.0.6",
    "pandas>=1.5.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
